force-app/main/default/objects/ARTL_Purchase_Request__c/ARTL_Purchase_Request__c.object-meta.xml
<CustomObject>
    <label>Purchase Request</label>
    <nameField>
        <label>Purchase Request Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Purchase Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>