force-app/main/default/objects/ARTL_Purchase_Request__c/fields/ARTL_PR_Response__c.field-meta.xml
<CustomField>
    <fullName>ARTL_PR_Response__c</fullName>
    <label>PR Response</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>