force-app/main/default/objects/ARTL_Purchase_Request__c/fields/ARTL_Status_Code__c.field-meta.xml
<CustomField>
    <fullName>ARTL_Status_Code__c</fullName>
    <label>Status Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>