force-app/main/default/objects/ARTL_Purchase_Request__c/fields/ARTL_Status_Description__c.field-meta.xml
<CustomField>
    <fullName>ARTL_Status_Description__c</fullName>
    <label>Status Description</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>