force-app/main/default/objects/ARTL_Purchase_Request__c/fields/Book_Name__c.field-meta.xml
<CustomField>
    <fullName>Book_Name__c</fullName>
    <label>Book Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>