force-app/main/default/objects/ARTL_Purchase_Request__c/fields/Fetch_PO__c.field-meta.xml
<CustomField>
    <fullName>Fetch_PO__c</fullName>
    <formula>HYPERLINK(&quot;/&quot; &amp; &quot;lightning/cmp/vlocity_cmt__vlocityLWCOmniWrapper?c__target=c:aRTLInvokeERPEnglish&amp;c__layout=lightning&amp;c__tabIcon=custom:custom18&amp;c__consumerTransactionId=&quot;+ Id +  &quot;&amp;c__consumerName=&quot; + Master_Order__r.Account.Name + &quot;&amp;c__activityAction=&quot; + &quot;NIPS_PO_Details&quot; + &quot;&amp;c__prId=&quot; +  PR_ID__c  + &quot;&amp;c__orderId=&quot; + Master_Order__c + &quot;&quot;, &quot;Fetch PO&quot; ,&quot;_self&quot; )</formula>
    <label>Fetch PO</label>
    <type>Text</type>
</CustomField>