force-app/main/default/objects/ARTL_Purchase_Request__c/fields/PR_ID__c.field-meta.xml
<CustomField>
    <fullName>PR_ID__c</fullName>
    <label>PR ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>