force-app/main/default/objects/ARTL_Purchase_Request__c/fields/Requisition_Number__c.field-meta.xml
<CustomField>
    <fullName>Requisition_Number__c</fullName>
    <label>Requisition Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>